Adds more layout styles and media q. Adds the before and after sections.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
 
     <link href="_output/css/main.css" rel="stylesheet">
 
-    <script type="text/javascript" src="@@{root}scripts/modernizr.js"></script>
-    <script type="text/javascript" src="@@{root}scripts/jquery.js"></script>
-
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
@@ -29,6 +26,10 @@
 
   <body>
     <header>
+      <div class="before">
+      <p>Your Items Are Selling Out</p>
+      <a>View In Browser</a>
+    </div>
       <div class="logo">
         <img src="assets/images/logo.png" alt="logo">
       </div>
@@ -56,13 +57,24 @@
         </div>
       </div>
     </article>
-      <div class="footer-a">
-        <div class="image-wrapper">
-          <img src="assets/images/img-1.png" alt="img-1">
-          <img src="assets/images/img-2.png" alt="img-2">
-          <img src="assets/images/img-3.png" alt="img-3">
-        </div>
+    <div class="footer-a">
+      <div class="image-wrapper">
+        <img src="assets/images/img-1.png" alt="img-1">
+        <img src="assets/images/img-2.png" alt="img-2">
+        <img src="assets/images/img-3.png" alt="img-3">
       </div>
+    </div>
+    <div class="nav-wrapper-mobile">
+      <div class="nav-items">
+        <a>home</a>
+        <a>kitchen & bar</a>
+        <a>jewerly</a>
+        <a>woman</a>
+        <a>men</a>
+        <a>this just in</a>
+        <a>sale</a>
+      </div>
+    </div>
     <footer>
       <div class="footer-nav">
         <a href="" target="_blank">contact us |</a>
@@ -75,5 +87,16 @@
         <img src="assets/images/social.png" alt="social">
       </div>
     </footer>
+    <div class="below">
+      <div class="below-content">
+        <p>Adjust your email subscriptions, frequency and settings:</p>
+        <a>Update Email Preferences</a>
+        <p>Or, click to Unsubscribe</p>
+        <p>You are receiving this email because you asked us to send you email newsletters highlighting new features and products.To ensure delivery to your inbox, please add: <a>info@lists.uncommongoods.com</a> to your address book of approved senders. Please email us with comments at: <a>feedback@uncommongoods.com.</a>
+
+        <p>©2013 UncommonGoodsTM L.L.C. 140 58th Street, Building B Suite 5AB, Brooklyn, New York, 11220</p>
+
+      </div>
+    </div>
   </body>
 </html>
