Adds layout updates and header update, adjusts social links.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Cantata+One" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+
     <link rel="icon" type="image/png" href="/images/favicon.png?v=0">
   </head>
 
@@ -28,20 +30,20 @@
     <header>
       <div class="before">
       <p>Your Items Are Selling Out</p>
-      <a>View In Browser</a>
+      <a href="" target="_blank">View In Browser</a>
     </div>
       <div class="logo">
-        <img src="assets/images/logo.png" alt="logo">
+        <img src="assets/images/logo.svg" alt="logo">
       </div>
       <div class="nav-wrapper">
         <div class="nav-items">
-          <a>home</a>
-          <a>kitchen & bar</a>
-          <a>jewerly</a>
-          <a>woman</a>
-          <a>men</a>
-          <a>this just in</a>
-          <a>sale</a>
+          <a href="">home</a>
+          <a href="">kitchen & bar</a>
+          <a href="">jewerly</a>
+          <a href="">woman</a>
+          <a href="">men</a>
+          <a href="">this just in</a>
+          <a href="">sale</a>
         </div>
       </div>
     <header>
@@ -90,9 +92,11 @@
     <div class="below">
       <div class="below-content">
         <p>Adjust your email subscriptions, frequency and settings:</p>
-        <a>Update Email Preferences</a>
+        <div class="button-b">
+          <a href="">Update Email Preferences</a>
+        </div>
         <p>Or, click to Unsubscribe</p>
-        <p>You are receiving this email because you asked us to send you email newsletters highlighting new features and products.To ensure delivery to your inbox, please add: <a>info@lists.uncommongoods.com</a> to your address book of approved senders. Please email us with comments at: <a>feedback@uncommongoods.com.</a>
+        <p>You are receiving this email because you asked us to send you email newsletters highlighting new features and products.To ensure delivery to your inbox, please add: <a href="">info@lists.uncommongoods.com</a> to your address book of approved senders. Please email us with comments at: <a href="">feedback@uncommongoods.com.</a>
 
         <p>©2013 UncommonGoodsTM L.L.C. 140 58th Street, Building B Suite 5AB, Brooklyn, New York, 11220</p>
 
